--- a/css/comment.css
+++ b/css/comment.css
@@ -57,6 +57,15 @@
     padding-bottom: 28px;
     border: 1px solid #cdcdcd;
     border-top: none; }
+    .comment_block .individuals_block .slick-arrow {
+      margin-top: 0px;
+      top: 60px;
+      background-color: transparent; }
+    .comment_block .individuals_block .slick-prev {
+      left: -5px; }
+    .comment_block .individuals_block .slick-next {
+      right: -5px;
+      right: -5px; }
     .comment_block .individuals_block_slide {
       width: 100%;
       float: left;
@@ -74,11 +83,17 @@
         -webkit-border-radius: 5px;
         width: 50%;
         max-width: 518px;
-        display: none;
         right: 5.8%;
         top: 95px;
         z-index: 999;
+        display: none;
         box-sizing: border-box; }
+        @media (max-width: 978px) {
+          .comment_block .individuals_block_slide .help_baner {
+            right: 22%; } }
+        @media (max-width: 700px) {
+          .comment_block .individuals_block_slide .help_baner {
+            right: 10%; } }
         .comment_block .individuals_block_slide .help_baner .arow_help {
           position: absolute;
           z-index: 99;
@@ -87,13 +102,24 @@
           background-image: url("../img/sprite_section.png");
           background-position: -46px -170px;
           top: -14px;
-          right: 20%; }
+          right: 15%; }
       .comment_block .individuals_block_slide_header {
         width: 100%;
         min-height: 110px; }
         .comment_block .individuals_block_slide_header_men {
           float: left;
           width: 50%; }
+          @media (max-width: 978px) {
+            .comment_block .individuals_block_slide_header_men {
+              width: 60%;
+              margin: 0 auto;
+              float: none;
+              margin-bottom: 10px;
+              clear: both;
+              overflow: hidden; } }
+          @media (max-width: 700px) {
+            .comment_block .individuals_block_slide_header_men {
+              width: 100%; } }
           .comment_block .individuals_block_slide_header_men_foto {
             float: left; }
           .comment_block .individuals_block_slide_header_men_info_block {
@@ -120,13 +146,22 @@
               width: 100%;
               font: 12px/24px 'robotoregular';
               color: #888888;
-              margin-top: 20px; }
+              margin-top: 10px; }
         .comment_block .individuals_block_slide_header_yandex_block {
           float: left;
           width: 50%;
           border: 2px solid #024753;
           box-sizing: border-box;
           min-height: 110px; }
+          @media (max-width: 978px) {
+            .comment_block .individuals_block_slide_header_yandex_block {
+              width: 60%;
+              margin: 0 auto;
+              float: none;
+              clear: both; } }
+          @media (max-width: 700px) {
+            .comment_block .individuals_block_slide_header_yandex_block {
+              width: 100%; } }
           .comment_block .individuals_block_slide_header_yandex_block_comment {
             float: left;
             margin-top: 2.5px; }
@@ -213,3 +248,5 @@
               .comment_block .individuals_block_slide_content_quality_zag h3 a {
                 display: inline-block;
                 margin-right: 12px; }
+  .comment_block .entity_block {
+    width: 100%; }
