--- a/sass/comment.scss
+++ b/sass/comment.scss
@@ -312,7 +312,89 @@
       }
     }
   }
-  .entity_block{
+  .entity_wrap{
+    float: left;
     width: 100%;
+    margin-top: 15px;
+   box-sizing: border-box;
+    .slick-arrow{
+      background-color: transparent;
+    }
+    .entity_icon{
+      width: 32px;
+      height: 26px;
+      background-image: url("../img/temp_sprite/comment_ur.png");
+      background-position: center;
+      display: inline-block;
+      margin-right: 15px;
+    }
+    .comment_block_header{
+      h3{
+        span{
+          color: #e81e1e;
+        }
+      }
+    }
+    &_slider{
+      width: 100%;
+      min-height: 95px;
+      padding-top: 32px;
+      padding-bottom: 38px;
+      border: 1px solid #cdcdcd;
+      border-top: 0px;
+      &_slide{
+        width: 100%;
+        padding: 0px 66.5px;
+        box-sizing: border-box;
+        img{
+          float: left;
+          margin-right:22px;
+        }
+        .big {
+          padding-bottom: 20px;
+          .all_read{
+            display: block;
+          }
+
+        }
+        .text_block {
+          width: 100%;
+          float: left;
+          position: relative;
+          margin-top: 15px;
+          .all_read {
+            font: 10px/20px 'Georgia-BoldItalic';
+            font-style: normal;
+            font-style: italic;
+            position: absolute;
+            right: 20px;
+            bottom: 0px;
+            color: #003c95;
+            text-decoration: underline;
+            display: none;
+            &:hover{
+              color: #620909;
+            }
+          }
+        }
+        .text_wrap {
+          width: 100%;
+          float: left;
+          overflow: hidden;
+          box-sizing: border-box;
+          height: 95px;
+          p{
+            width: 100%;
+            float: left;
+            font: 12px/18px  'robotolight';
+            color: #282828;
+            padding-top: 20px;
+            img{
+              margin-top: -20px;
+            }
+          }
+        }
+      }
+    }
   }
 }
