--- a/sass/comment.scss
+++ b/sass/comment.scss
@@ -78,10 +78,18 @@
     }
     .slick-prev{
       left: -5px;
+      &:hover{
+        background-image: url("../img/temp_hover/prev_hover.png");
+        background-position: center;
+      }
+
     }
     .slick-next{
       right: -5px;
-      right: -5px;
+      &:hover{
+        background-image: url("../img/temp_hover/next_hover.png");
+        background-position: center;
+      }
     }
     &_slide{
       width: 100%;
@@ -319,6 +327,21 @@
    box-sizing: border-box;
     .slick-arrow{
       background-color: transparent;
+    }
+    .slick-prev{
+      left: -5px;
+      &:hover{
+        background-image: url("../img/temp_hover/prev_hover.png");
+        background-position: center;
+      }
+
+    }
+    .slick-next{
+      right: -5px;
+      &:hover{
+        background-image: url("../img/temp_hover/next_hover.png");
+        background-position: center;
+      }
     }
     .entity_icon{
       width: 32px;
