--- a/sass/comment.scss
+++ b/sass/comment.scss
@@ -21,6 +21,7 @@
   -webkit-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
   box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
+  display: none;
   .close {
     display: block;
     position: absolute;
