--- a/css/modal.css
+++ b/css/modal.css
@@ -1288,7 +1288,8 @@
   z-index: 99;
   -webkit-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
-  box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24); }
+  box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
+  display: none; }
   .comment_block .close {
     display: block;
     position: absolute;
