--- a/css/schem.css
+++ b/css/schem.css
@@ -45,7 +45,6 @@
   margin-left: -400px;
   width: 100%;
   max-width: 800px;
-  height: 100vh;
   max-height: 600px;
   background: #FFFFFF;
   padding: 15px;
@@ -67,7 +66,8 @@
     overflow: hidden; }
   .schem_big_block__schem_block {
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    max-height: 550px; }
     .schem_big_block__schem_block_nav {
       position: absolute;
       width: 100%;
@@ -75,6 +75,9 @@
       text-align: center;
       top: 25px;
       left: 0px; }
+      @media (max-height: 540px) {
+        .schem_big_block__schem_block_nav {
+          display: none; } }
       .schem_big_block__schem_block_nav a {
         display: inline-block;
         padding: 0px 10px;
@@ -103,12 +106,14 @@
       height: 100%;
       display: table-cell;
       vertical-align: middle;
-      background: #C0C0C0; }
+      background: #C0C0C0;
+      text-align: center; }
       .schem_big_block__schem_block_img_block #schem1 {
         display: inline-block; }
       .schem_big_block__schem_block_img_block img {
         max-width: 100%;
-        display: none; }
+        display: none;
+        max-height: 90vh; }
   .schem_big_block .scheme_close, .schem_big_block .map_close {
     display: block;
     position: absolute;
