--- a/sass/schem.scss
+++ b/sass/schem.scss
@@ -61,7 +61,6 @@
   margin-left: -400px;
   width: 100%;
   max-width: 800px;
-  height: 100vh;
   max-height: 600px;
   background: #FFFFFF;
   padding: 15px;
@@ -86,6 +85,7 @@
   &__schem_block {
     width: 100%;
     height: 100%;
+    max-height: 550px;
 
     &_nav {
       position: absolute;
@@ -94,6 +94,9 @@
       text-align: center;
       top: 25px;
       left: 0px;
+      @media(max-height: 540px){
+        display: none;
+      }
       a {
         display: inline-block;
         padding: 0px 10px;
@@ -127,12 +130,14 @@
       display: table-cell;
       vertical-align: middle;
       background: #C0C0C0;
+      text-align: center;
       #schem1{
         display: inline-block;
       }
       img {
         max-width: 100%;
         display: none;
+        max-height: 90vh;
 
       }
     }
