--- a/css/style.css
+++ b/css/style.css
@@ -3792,6 +3792,52 @@ table {
       padding-right: 14px;
       box-sizing: border-box; }
 
+.kelon {
+  max-width: 716px;
+  min-height: 569px;
+  background: url("../img/kelon.jpg") center top;
+  padding-top: 25px;
+  padding-right: 20px;
+  box-sizing: border-box;
+  display: none; }
+  @media (max-width: 458px) {
+    .kelon {
+      padding: 0px; } }
+  .kelon_text {
+    float: right;
+    width: 50.95%; }
+    @media (max-width: 622px) {
+      .kelon_text {
+        width: 70%; } }
+    @media (max-width: 458px) {
+      .kelon_text {
+        width: 100%; } }
+    .kelon_text_info {
+      width: 100%;
+      background: #dbe8ce;
+      border: 2px solid #ced3ce;
+      font: 16px/24px Verdana;
+      color: #7a8075;
+      margin-bottom: 19px;
+      padding-left: 15px;
+      padding-right: 14px;
+      box-sizing: border-box; }
+      .kelon_text_info span {
+        font-weight: bold;
+        color: #010101; }
+    .kelon_text .descript_wrap {
+      height: 284px;
+      position: relative; }
+    .kelon_text_text {
+      width: 100%;
+      background: #dbe8ce;
+      border: 2px solid #ced3ce;
+      font: 14px/20px Verdana;
+      color: #7a8075;
+      padding-left: 15px;
+      padding-right: 14px;
+      box-sizing: border-box; }
+
 .aux {
   padding: 21px;
   padding-left: 23px;
