--- a/css/monufactur.css
+++ b/css/monufactur.css
@@ -151,7 +151,8 @@
       width: 49.25%;
       background: #dbe8ce;
       border: 2px solid #ced3ce;
-      font: 16px/24px Verdana;
+      font: 14px/24px Verdana;
+      letter-spacing: -0.6px;
       color: #7a8075;
       margin-bottom: 19px;
       padding-left: 15px;
@@ -205,7 +206,8 @@
       width: 49.25%;
       background: #dbe8ce;
       border: 2px solid #ced3ce;
-      font: 16px/24px Verdana;
+      font: 14px/24px Verdana;
+      letter-spacing: -0.6px;
       color: #7a8075;
       margin-bottom: 19px;
       padding-left: 15px;
@@ -348,7 +350,8 @@
       width: 100%;
       background: #dbe8ce;
       border: 2px solid #ced3ce;
-      font: 16px/24px Verdana;
+      font: 14px/24px Verdana;
+      letter-spacing: -0.6px;
       color: #7a8075;
       margin-bottom: 19px;
       padding-left: 15px;
@@ -514,6 +517,8 @@
   box-sizing: border-box;
   background: #FFFFFF;
   display: none; }
+  .tcl .descript_wrap {
+    height: 240px; }
   .tcl_img {
     width: 100%;
     margin-bottom: 20px;
