--- a/css/style.css
+++ b/css/style.css
@@ -3864,7 +3864,8 @@ table {
       width: 49.25%;
       background: #dbe8ce;
       border: 2px solid #ced3ce;
-      font: 16px/24px Verdana;
+      font: 14px/24px Verdana;
+      letter-spacing: -0.6px;
       color: #7a8075;
       margin-bottom: 19px;
       padding-left: 15px;
@@ -3918,7 +3919,8 @@ table {
       width: 49.25%;
       background: #dbe8ce;
       border: 2px solid #ced3ce;
-      font: 16px/24px Verdana;
+      font: 14px/24px Verdana;
+      letter-spacing: -0.6px;
       color: #7a8075;
       margin-bottom: 19px;
       padding-left: 15px;
@@ -4061,7 +4063,8 @@ table {
       width: 100%;
       background: #dbe8ce;
       border: 2px solid #ced3ce;
-      font: 16px/24px Verdana;
+      font: 14px/24px Verdana;
+      letter-spacing: -0.6px;
       color: #7a8075;
       margin-bottom: 19px;
       padding-left: 15px;
@@ -4227,6 +4230,8 @@ table {
   box-sizing: border-box;
   background: #FFFFFF;
   display: none; }
+  .tcl .descript_wrap {
+    height: 240px; }
   .tcl_img {
     width: 100%;
     margin-bottom: 20px;
