--- a/sass/monufactur.scss
+++ b/sass/monufactur.scss
@@ -177,7 +177,8 @@
       width: 49.25%;
       background: #dbe8ce;
       border: 2px solid #ced3ce;
-      font: 16px/24px Verdana;
+      font: 14px/24px Verdana;
+      letter-spacing: -0.6px;
       color: #7a8075;
       margin-bottom: 19px;
       padding-left: 15px;
@@ -241,7 +242,8 @@
       width: 49.25%;
       background: #dbe8ce;
       border: 2px solid #ced3ce;
-      font: 16px/24px Verdana;
+      font: 14px/24px Verdana;
+      letter-spacing: -0.6px;
       color: #7a8075;
       margin-bottom: 19px;
       padding-left: 15px;
@@ -407,7 +409,8 @@
       width: 100%;
       background: #dbe8ce;
       border: 2px solid #ced3ce;
-      font: 16px/24px Verdana;
+      font: 14px/24px Verdana;
+      letter-spacing: -0.6px;
       color: #7a8075;
       margin-bottom: 19px;
       padding-left: 15px;
@@ -607,6 +610,9 @@
   box-sizing: border-box;
   background: #FFFFFF;
   display: none;
+  .descript_wrap{
+    height: 240px;
+  }
   &_img {
     width: 100%;
     margin-bottom: 20px;
@@ -619,6 +625,7 @@
   }
   &_info_line {
     width: 100%;
+
     p {
       float: left;
       width: 49.25%;
